--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ cryptography==42.0.7
 python-dotenv==1.0.1
 requests==2.31.0
 numpy==1.26.4
-scikit-fuzzy==0.4.2
+#scikit-fuzzy==0.4.2
 matplotlib==3.8.4
+git+https://github.com/sanand0/scikit-fuzzy.git@no-distutils
