--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 Flask==2.3.3
 gunicorn==21.2.0
 firebase-admin==6.4.0
@@ -9,3 +10,5 @@ numpy==1.26.4
 matplotlib==3.8.4
 #git+https://github.com/PhantomInsights/scikit-fuzzy.git@python312-compat
 packaging>=23.1
+
+scipy>=1.5
