--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ cryptography==42.0.7
 python-dotenv==1.0.1
 requests==2.31.0
 numpy==1.26.4
-#scikit-fuzzy==0.4.2
+scikit-fuzzy==0.4.2
 matplotlib==3.8.4
 #git+https://github.com/PhantomInsights/scikit-fuzzy.git@python312-compat
 packaging>=23.1
